# filetransfer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: design-architecture.zh_CN.md  development-log.zh_CN.md  packaging.en.md  packaging.md  packaging.zh_CN.md  protocol.md  technical-roadmap.md
include/lan/app/: receiver_config.h  receiver_server.h  sender_config.h  sender_transfer.h  transfer_event.h  transfer_scheduler.h  transfer_snapshot.h
include/lan/common/: cancellation.h  error.h  parse.h  path.h  result.h  size.h  stopwatch.h
include/lan/fs/: file_descriptor.h  file_hash.h  local_copy.h
include/lan/net/: connection.h  posix_backend.h  tcp.h
include/lan/protocol/: frame.h  hello.h
include/lan/transfer/: block_signature.h  chunk_codec.h  delta.h  file_metadata.h  manifest.h  part_file_guard.h  single_file.h  sync_codec.h  sync_executor.h  sync_plan.h  sync_session.h
packaging/: lan-file-transfer.desktop
scripts/: manual_verify.sh  package_deb.sh
src/: CMakeLists.txt  gui_main.cpp  lan_tests.cpp  local_copy_main.cpp  receiver_main.cpp  sender_main.cpp
src/app/: receiver_config.cpp  receiver_server.cpp  sender_config.cpp  sender_transfer.cpp  transfer_event.cpp  transfer_scheduler.cpp  transfer_snapshot.cpp
src/common/: error.cpp  parse.cpp  path.cpp  size.cpp  stopwatch.cpp
src/fs/: file_descriptor.cpp  file_hash.cpp  local_copy.cpp
src/gui/: control_message.cpp  control_message.h  device_manager.cpp  device_manager.h  discovery_controller.cpp  discovery_controller.h  drop_panel.cpp  drop_panel.h  main_window.cpp  main_window.h  qt_utils.cpp  qt_utils.h  receive_history_dialog.cpp  receive_history_dialog.h  settings_dialog.cpp  settings_dialog.h  target_dialogs.cpp  target_dialogs.h  transfer_card.cpp  transfer_card.h  transfer_events.cpp  transfer_events.h  transfer_list_model.cpp  transfer_list_model.h  transfer_record_matcher.cpp  transfer_record_matcher.h  transfer_record_repository.cpp  transfer_record_repository.h  transfer_record_store.cpp  transfer_record_store.h  types.h
src/net/: posix_backend.cpp  tcp.cpp
src/protocol/: frame.cpp  hello.cpp
src/transfer/: block_signature.cpp  chunk_codec.cpp  delta.cpp  file_metadata.cpp  manifest.cpp  part_file_guard.cpp  single_file.cpp  sync_codec.cpp  sync_executor.cpp  sync_plan.cpp  sync_session.cpp
tests/: CMakeLists.txt  common_tests.cpp  gui_device_manager_tests.cpp  gui_transfer_card_tests.cpp  gui_transfer_list_model_tests.cpp  transfer_tests.cpp
translations/: lan-file-transfer_zh_CN.ts
